--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 # special flags for some files
-if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
+if ("${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU")
     SET_SOURCE_FILES_PROPERTIES( "lattice.f90" PROPERTIES
                                 COMPILE_FLAGS "-ffree-line-length-240")
     # long lines for interaction matrix
