--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,7 @@ if (PROJECT_NAME STREQUAL "DAMASK_spectral")
 elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
       add_library(DAMASK_INTERFACE OBJECT "FEM_interface.f90")
 else ()
-    message ( FATAL_ERROR "PROJECT_NAME is not defined!")
+    message (FATAL_ERROR "Build target (PROJECT_NAME) is not defined")
 endif()
 add_dependencies(DAMASK_INTERFACE PREC)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_INTERFACE>)
