migrating reading in of material.config to own module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,10 @@ add_library(CHAINED_LIST OBJECT "list.f90")
 add_dependencies(CHAINED_LIST IO)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:CHAINED_LIST>)
 
+add_library(CONFIG_MATERIAL OBJECT "config_material.f90")
+add_dependencies(CONFIG_MATERIAL IO)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:CONFIG_MATERIAL>)
+
 add_library(NUMERICS OBJECT "numerics.f90")
 add_dependencies(NUMERICS IO)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:NUMERICS>)
