wrong dependencies cause failure during compilation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,6 @@ add_dependencies(SYSTEM_ROUTINES C_ROUTINES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:SYSTEM_ROUTINES>)
 
 add_library(PREC OBJECT "prec.f90")
-add_dependencies(PREC SYSTEM_ROUTINES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:PREC>)
 
 if ("${PROJECT_NAME}" STREQUAL "DAMASK_spectral")
@@ -23,20 +22,12 @@ if ("${PROJECT_NAME}" STREQUAL "DAMASK_spectral")
 elseif ("${PROJECT_NAME}" STREQUAL "DAMASK_FEM")
       add_library(DAMASK_INTERFACE OBJECT "FEM_interface.f90")
 endif()
-add_dependencies(DAMASK_INTERFACE PREC)
+add_dependencies(DAMASK_INTERFACE PREC SYSTEM_ROUTINES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_INTERFACE>)
 
 add_library(IO OBJECT "IO.f90")
 add_dependencies(IO DAMASK_INTERFACE)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:IO>)
-
-add_library(CHAINED_LIST OBJECT "list.f90")
-add_dependencies(CHAINED_LIST IO)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:CHAINED_LIST>)
-
-add_library(CONFIG_MATERIAL OBJECT "config_material.f90")
-add_dependencies(CONFIG_MATERIAL IO)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:CONFIG_MATERIAL>)
 
 add_library(NUMERICS OBJECT "numerics.f90")
 add_dependencies(NUMERICS IO)
@@ -45,6 +36,14 @@ list(APPEND OBJECTFILES $<TARGET_OBJECTS:NUMERICS>)
 add_library(DEBUG OBJECT "debug.f90")
 add_dependencies(DEBUG NUMERICS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DEBUG>)
+
+add_library(CHAINED_LIST OBJECT "list.f90")
+add_dependencies(CHAINED_LIST DEBUG)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:CHAINED_LIST>)
+
+add_library(CONFIG_MATERIAL OBJECT "config_material.f90")
+add_dependencies(CONFIG_MATERIAL DEBUG)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:CONFIG_MATERIAL>)
 
 add_library(FEsolving OBJECT "FEsolving.f90")
 add_dependencies(FEsolving DEBUG)
