--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,7 @@ add_library(CHAINED_LIST OBJECT "linked_list.f90")
 add_dependencies(CHAINED_LIST DEBUG)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:CHAINED_LIST>)
 
-add_library(CONFIG_MATERIAL OBJECT "config_material.f90")
+add_library(CONFIG_MATERIAL OBJECT "config.f90")
 add_dependencies(CONFIG_MATERIAL CHAINED_LIST)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:CONFIG_MATERIAL>)
 
