--- a/examples/AbaqusStandard/material.config
+++ b/examples/AbaqusStandard/material.config
@@ -3,10 +3,10 @@
 #-------------------#
 
 [dummy]
-type	none
+mech	none
 
 [poly]
-type	isostrain
+mech	isostrain
 Ngrains	10
 
 
@@ -63,7 +63,7 @@ gdot0_slip              0.001
 n_slip                  20
 tau0_slip                 31e6                # per family
 tausat_slip               63e6               # per family
-w0_slip                 2.25
+a_slip                 2.25
 gdot0_twin              0.001
 n_twin                  20
 tau0_twin                 31e6               # per family
