openmp does not work when running with runtime debugging

--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -32,7 +32,7 @@ fortCmd = "ifort"
 # -integer-size 32 -DINT=4        assume size of integer to be 4 bytes, matches our definition of pInt
 
 compile_fortran = (fortCmd + " -c -fPIC -auto -shared-intel " + 
-                   "-I%I -free -O1 -fpp -openmp " +
+                   "-I%I -free -O3 -fpp " +
                    "-ftz -diag-disable 5268 " +
                    "-implicitnone -standard-semantics " +
                    "-assume nostd_mod_proc_name " +
