--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -19,7 +19,7 @@ fortCmd = "ifort"
 # -free                           to use free-format FORTRAN 90 syntax
 # -O <0-3>                        optimization level
 # -fpp                            use FORTRAN preprocessor on source code
-# -openmp                         build with openMP support
+# -fopenmp                        build with openMP support
 # -w90 -w95                       suppress messages about use of non-standard Fortran (previous version of abaqus_v6.env only)
 # -WB                             turn a compile-time bounds check into a warning (previous version of abaqus_v6.env only)
 # -mP2OPT_hpo_vec_divbyzero=F     inofficial compiler switch, proposed by abaqus but highly dubios (previous version of abaqus_v6.env only)
@@ -32,7 +32,7 @@ fortCmd = "ifort"
 # -integer-size 32 -DINT=4        assume size of integer to be 4 bytes, matches our definition of pInt
 
 compile_fortran = (fortCmd + " -c -fPIC -auto -shared-intel " + 
-                   "-I%I -free -O3 -fpp " +
+                   "-I%I -free -O3 -fpp -fopenmp " +
                    "-ftz -diag-disable 5268 " +
                    "-implicitnone -standard-semantics " +
                    "-assume nostd_mod_proc_name " +
