--- a/installation/mods_Abaqus/abaqus_v6_debug.env
+++ b/installation/mods_Abaqus/abaqus_v6_debug.env
@@ -19,6 +19,7 @@ fortCmd = "ifort"
 # -free                           to use free-format FORTRAN 90 syntax
 # -O <0-3>                        optimization level
 # -fpp                            use FORTRAN preprocessor on source code
+# -fopenmp                        build with openMP support
 # -w90 -w95                       suppress messages about use of non-standard Fortran (previous version of abaqus_v6.env only)
 # -WB                             turn a compile-time bounds check into a warning (previous version of abaqus_v6.env only)
 # -mP2OPT_hpo_vec_divbyzero=F     inofficial compiler switch, proposed by abaqus but highly dubios (previous version of abaqus_v6.env only)
@@ -30,6 +31,7 @@ fortCmd = "ifort"
 # -real-size 64 -DFLOAT=8         assume size of real to be 8 bytes, matches our definition of pReal
 # -integer-size 32 -DINT=4        assume size of integer to be 4 bytes, matches our definition of pInt
 
+#-fopenmp crashes in config.f90 since presence of default string is not recognized#
 compile_fortran = (fortCmd + " -c -fPIC -auto -shared-intel " + 
                    "-I%I -free -O0 -fpp " +
                    "-ftz -diag-disable 5268 " +
