--- a/examples/SpectralMethod/EshelbyInclusion/material.config
+++ b/examples/SpectralMethod/EshelbyInclusion/material.config
@@ -3,7 +3,7 @@
 #-------------------#
 
 [direct]
-type	none                               # isostrain 1 grain
+mech	none                               # isostrain 1 grain
 
 thermal                 adiabatic        # thermal strain (stress) induced mass transport
 initialT                300.0
