adjusted test to leaner Abaqus wrapper without exp

--- a/installation/mods_Abaqus/abaqus_v6_debug.env
+++ b/installation/mods_Abaqus/abaqus_v6_debug.env
@@ -31,7 +31,8 @@ fortCmd = "ifort"
 # -real-size 64 -DFLOAT=8         assume size of real to be 8 bytes, matches our definition of pReal
 # -integer-size 32 -DINT=4        assume size of integer to be 4 bytes, matches our definition of pInt
 
-#-fopenmp crashes in config.f90 since presence of default string is not recognized#
+# 'check pointers' does not work
+
 compile_fortran = (fortCmd + " -c -fPIC -auto -shared-intel " + 
                    "-I%I -free -O0 -fpp " +
                    "-ftz -diag-disable 5268 " +
