avoid deadlock for master pipelines

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -418,6 +418,9 @@ createTar:
   script:
     - cd $(mktemp -d)
     - $DAMASKROOT/PRIVATE/releasing/deployMe.sh $CI_COMMIT_SHA
+  except:
+    - master
+    - release
 
 ###################################################################################################
 AbaqusStd:
