--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ variables:
   # ===============================================================================================
   # ++++++++++++ Compiler ++++++++++++++++++++++++++++++++++++++++++++++
   IntelCompiler16_0:               "Compiler/Intel/16.0 Libraries/IMKL/2016"
+  IntelCompiler16_4:               "Compiler/Intel/16.4"
   IntelCompiler17_0:               "Compiler/Intel/17.0 Libraries/IMKL/2017"
   IntelCompiler18_1:               "Compiler/Intel/18.1 Libraries/IMKL/2018"
   GNUCompiler7_3:                  "Compiler/GNU/7.3"
@@ -329,7 +330,7 @@ TextureComponents:
 Marc_compileIfort2017:
   stage: compileMarc2017
   script:
-    - module load $IntelCompiler17_0 $MSC2017
+    - module load $IntelCompiler16_4 $MSC2017
     - Marc_compileIfort/test.py -m 2017
   except:
     - master
@@ -339,7 +340,7 @@ Marc_compileIfort2017:
 Hex_elastic:
   stage: marc
   script:
-    - module load $IntelCompiler17_0 $MSC
+    - module load $IntelCompiler16_4 $MSC
     - Hex_elastic/test.py
   except:
     - master
@@ -348,7 +349,7 @@ Hex_elastic:
 CubicFCC_elastic:
   stage: marc
   script:
-    - module load $IntelCompiler17_0 $MSC
+    - module load $IntelCompiler16_4 $MSC
     - CubicFCC_elastic/test.py
   except:
     - master
@@ -357,7 +358,7 @@ CubicFCC_elastic:
 CubicBCC_elastic:
   stage: marc
   script:
-    - module load $IntelCompiler17_0 $MSC
+    - module load $IntelCompiler16_4 $MSC
     - CubicBCC_elastic/test.py
   except:
     - master
@@ -366,7 +367,7 @@ CubicBCC_elastic:
 J2_plasticBehavior:
   stage: marc
   script:
-    - module load $IntelCompiler17_0 $MSC
+    - module load $IntelCompiler16_4 $MSC
     - J2_plasticBehavior/test.py
   except:
     - master
@@ -376,7 +377,7 @@ J2_plasticBehavior:
 Abaqus_compile2017:
   stage: compileAbaqus2017
   script:
-    - module load $IntelCompiler16_0 $Abaqus2017
+    - module load $IntelCompiler16_4 $Abaqus2017
     - Abaqus_compileIfort/test.py -a 2017
   except:
     - master
@@ -392,7 +393,7 @@ SpectralExample:
 AbaqusExample:
   stage: example
   script:
-    - module load $IntelCompiler16_0 $Abaqus
+    - module load $IntelCompiler16_4 $Abaqus
     - Abaqus_example/test.py
   only:
     - development
