using shared interface for spectral and FEM solver
group_scalar seems inappropriate as integers are also scalars. renamed
to group_float (is actually usually of double precision).

think about better name, types should have a t prefix. tgroupFloat?

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,13 +17,7 @@ list(APPEND OBJECTFILES $<TARGET_OBJECTS:SYSTEM_ROUTINES>)
 add_library(PREC OBJECT "prec.f90")
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:PREC>)
 
-if (PROJECT_NAME STREQUAL "DAMASK_spectral")
-      add_library(DAMASK_INTERFACE OBJECT "spectral_interface.f90")
-elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
-      add_library(DAMASK_INTERFACE OBJECT "FEM_interface.f90")
-else ()
-    message (FATAL_ERROR "Build target (PROJECT_NAME) is not defined")
-endif()
+add_library(DAMASK_INTERFACE OBJECT "DAMASK_interface.f90")
 add_dependencies(DAMASK_INTERFACE PREC SYSTEM_ROUTINES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_INTERFACE>)
 
