HDF5 was not compiled due to missing dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,7 +36,7 @@ add_dependencies(HDF5_UTILITIES IO)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:HDF5_UTILITIES>)
 
 add_library(NUMERICS OBJECT "numerics.f90")
-add_dependencies(NUMERICS IO)
+add_dependencies(NUMERICS HDF5_UTILITIES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:NUMERICS>)
 
 add_library(DEBUG OBJECT "debug.f90")
