using only internal Schmid and nonSchmid matrix

--- a/examples/SpectralMethod/Polycrystal/material.config
+++ b/examples/SpectralMethod/Polycrystal/material.config
@@ -55,7 +55,7 @@ a_slip                  2.25
 h0_slipslip             75e6
 interaction_slipslip    1 1 1.4 1.4 1.4 1.4
 atol_resistance         1
-
+nonschmid_coefficients   0.938 0.71 4.43 0.0 0.0 0.0
 
 #-------------------#
 <microstructure>
