need test for non-schmid

--- a/examples/ConfigFiles/Phase_Phenopowerlaw_BCC-Martensite.config
+++ b/examples/ConfigFiles/Phase_Phenopowerlaw_BCC-Martensite.config
@@ -18,5 +18,5 @@ tau0_slip               405.8e6  456.7e6        # per family
 tausat_slip             872.9e6  971.2e6        # per family
 h0_slipslip             563.0e9
 interaction_slipslip    1 1 1.4 1.4 1.4 1.4
-w0_slip                 2.0
+a_slip                 2.0
 (output) totalshear
