--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,12 @@ before_script:
     done
   - source $DAMASKROOT/env/DAMASK.sh
   - cd $DAMASKROOT/PRIVATE/testing
+  - echo "Job start: $(date)"
 
+###################################################################################################
+after_script:
+  - echo "Job end: $(date)"
+#
 ###################################################################################################
 variables:
   # ===============================================================================================
