ticks caused trouble, not entirely clear why

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,12 +29,12 @@ before_script:
     done
   - source $DAMASKROOT/env/DAMASK.sh
   - cd $DAMASKROOT/PRIVATE/testing
-  - echo "Job start: $(date)"
+  - echo Job start: $(date)
 
 ###################################################################################################
 after_script:
-  - echo "Job end: $(date)"
-#
+  - echo Job end: $(date)
+
 ###################################################################################################
 variables:
   # ===============================================================================================
