--- a/examples/ConfigFiles/Crystallite_All.config
+++ b/examples/ConfigFiles/Crystallite_All.config
@@ -5,15 +5,10 @@
 (output) orientation    # quaternion
 (output) eulerangles    # orientation as Bunge triple in degree
 (output) grainrotation  # deviation from initial orientation as axis (1-3) and angle in degree (4) in crystal reference coordinates
-(output) grainrotationx # deviation from initial orientation as angle in degrees around sample reference x axis
-(output) grainrotationy # deviation from initial orientation as angle in degrees around sample reference y axis
-(output) grainrotationz # deviation from initial orientation as angle in degrees around sample reference z axis
-(output) f              # deformation gradient tensor; synonyms: "defgrad"
+(output) f              # deformation gradient tensor
 (output) fe             # elastic deformation gradient tensor
 (output) fp             # plastic deformation gradient tensor
-(output) e              # total strain as Green-Lagrange tensor 
-(output) ee             # elastic strain as Green-Lagrange tensor 
-(output) p              # first Piola-Kichhoff stress tensor; synonyms: "firstpiola", "1stpiola"
-(output) s              # second Piola-Kichhoff stress tensor; synonyms: "tstar", "secondpiola", "2ndpiola"
+(output) p              # first Piola-Kichhoff stress tensor
+(output) s              # second Piola-Kichhoff stress tensor
 (output) lp             # plastic velocity gradient tensor
 (output) elasmatrix     # elastic stiffness matrix
