--- a/examples/FEM/polyXtal/material.config
+++ b/examples/FEM/polyXtal/material.config
@@ -2,8 +2,7 @@
 <homogenization>
 #-------------------#
 [SX]
-mech	        isostrain
-Nconstituents	      1
+mech	        none
 
 #-------------------#
 <crystallite>
