both solvers can share quit

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,8 +17,12 @@ list(APPEND OBJECTFILES $<TARGET_OBJECTS:SYSTEM_ROUTINES>)
 add_library(PREC OBJECT "prec.f90")
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:PREC>)
 
+add_library(QUIT OBJECT "quit.f90")
+add_dependencies(QUIT PREC)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:QUIT>)
+
 add_library(DAMASK_INTERFACE OBJECT "DAMASK_interface.f90")
-add_dependencies(DAMASK_INTERFACE PREC SYSTEM_ROUTINES)
+add_dependencies(DAMASK_INTERFACE QUIT SYSTEM_ROUTINES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_INTERFACE>)
 
 add_library(IO OBJECT "IO.f90")
