--- a/CONFIG
+++ b/CONFIG
@@ -6,6 +6,8 @@ set DAMASK_BIN            = ${DAMASK_ROOT}/bin
 set DAMASK_NUM_THREADS    = 4
 
 set MSC_ROOT              = /opt/msc
-set MARC_VERSION          = 2017
+set MARC_VERSION          = 2018.1
 
 set ABAQUS_VERSION        = 2018.1
+
+set DAMASK_HDF5           = OFF
