--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ variables:
   # ------------ Defaults ----------------------------------------------
   Abaqus:                          "$Abaqus2017"
   MSC:                             "$MSC2017"
-  IntelMarc:                       "IntelCompiler16_4"
+  IntelMarc:                       "$IntelCompiler16_4"
   # ++++++++++++ Documentation +++++++++++++++++++++++++++++++++++++++++
   Doxygen1_8_13:                   "Documentation/Doxygen/1.8.13"
   # ------------ Defaults ----------------------------------------------
