--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,9 +41,9 @@ add_library(DEBUG OBJECT "debug.f90")
 add_dependencies(DEBUG NUMERICS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DEBUG>)
 
-add_library(CONFIG OBJECT "config.f90")
-add_dependencies(CONFIG DEBUG)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:CONFIG>)
+add_library(DAMASK_CONFIG OBJECT "config.f90")
+add_dependencies(DAMASK_CONFIG DEBUG)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_CONFIG>)
 
 add_library(FEsolving OBJECT "FEsolving.f90")
 add_dependencies(FEsolving DEBUG)
@@ -68,7 +68,7 @@ elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
 endif()
 
 add_library(MATERIAL OBJECT "material.f90")
-add_dependencies(MATERIAL MESH CONFIG)
+add_dependencies(MATERIAL MESH DAMASK_CONFIG)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:MATERIAL>)
 
 add_library(DAMASK_HELPERS OBJECT "lattice.f90")
