--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,16 +29,16 @@ add_library(IO OBJECT "IO.f90")
 add_dependencies(IO DAMASK_INTERFACE)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:IO>)
 
-add_library(HDF5_UTILITIES OBJECT "HDF5_utilities.f90")
-add_dependencies(HDF5_UTILITIES IO)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:HDF5_UTILITIES>)
-
 add_library(NUMERICS OBJECT "numerics.f90")
-add_dependencies(NUMERICS HDF5_UTILITIES)
+add_dependencies(NUMERICS IO)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:NUMERICS>)
 
+add_library(HDF5_UTILITIES OBJECT "HDF5_utilities.f90")
+add_dependencies(HDF5_UTILITIES NUMERICS)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:HDF5_UTILITIES>)
+
 add_library(DEBUG OBJECT "debug.f90")
-add_dependencies(DEBUG NUMERICS)
+add_dependencies(DEBUG HDF5_UTILITIES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DEBUG>)
 
 add_library(DAMASK_CONFIG OBJECT "config.f90")
