compile results module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,20 +33,24 @@ add_library(NUMERICS OBJECT "numerics.f90")
 add_dependencies(NUMERICS IO)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:NUMERICS>)
 
-add_library(HDF5_UTILITIES OBJECT "HDF5_utilities.f90")
-add_dependencies(HDF5_UTILITIES NUMERICS)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:HDF5_UTILITIES>)
-
 add_library(DEBUG OBJECT "debug.f90")
-add_dependencies(DEBUG HDF5_UTILITIES)
+add_dependencies(DEBUG NUMERICS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DEBUG>)
 
 add_library(DAMASK_CONFIG OBJECT "config.f90")
 add_dependencies(DAMASK_CONFIG DEBUG)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_CONFIG>)
 
+add_library(HDF5_UTILITIES OBJECT "HDF5_utilities.f90")
+add_dependencies(HDF5_UTILITIES DAMASK_CONFIG)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:HDF5_UTILITIES>)
+
+add_library(RESULTS OBJECT "results.f90")
+add_dependencies(RESULTS HDF5_UTILITIES)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:RESULTS>)
+
 add_library(FEsolving OBJECT "FEsolving.f90")
-add_dependencies(FEsolving DEBUG)
+add_dependencies(FEsolving RESULTS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEsolving>)
 
 add_library(DAMASK_MATH OBJECT "math.f90")
