draft (no license for checking)

--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -12,9 +12,15 @@
 #
 import os, re, glob, driverUtils
 from damask import version as DAMASKVERSION
+from damask import Environment
+myEnv = damask.Environment()
 
-# Use the version in $PATH
-fortCmd = "ifort"
+if myEnv.options['DAMASK_HDF5'] == 'ON':
+  # use hdf5 compiler wrapper in $PATH
+  fortCmd = os.popen('h5fc -shlib -show').read().replace('\n','')
+else
+  # Use the version in $PATH
+  fortCmd = "ifort"
 
 # -free                           to use free-format FORTRAN 90 syntax
 # -O <0-3>                        optimization level
