--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -13,12 +13,14 @@
 import os, re, glob, driverUtils
 from damask import version as DAMASKVERSION
 from damask import Environment
-myEnv = damask.Environment()
+myEnv = Environment()
 
 if myEnv.options['DAMASK_HDF5'] == 'ON':
   # use hdf5 compiler wrapper in $PATH
-  fortCmd = os.popen('h5fc -shlib -show').read().replace('\n','')
-else
+  fortCmd   = os.popen('h5fc -shlib -show').read().replace('\n','')                                 # complicated way needed to pass in DAMASKVERSION string
+  link_sl  += fortCmd.split()[1:]
+  fortCmd  +=" -DDAMASKHDF5"
+else:
   # Use the version in $PATH
   fortCmd = "ifort"
 
@@ -56,4 +58,6 @@ ask_delete=OFF
 
 # Remove the temporary names from the namespace
 del fortCmd
+del Environment
+del myEnv
 del DAMASKVERSION
