added rotation conversions
modified versions from 3Drotations code (available on GitHub) by Marc De Graef

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,18 +49,30 @@ add_library(FEsolving OBJECT "FEsolving.f90")
 add_dependencies(FEsolving DEBUG)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEsolving>)
 
-add_library(DAMASK_MATH OBJECT "math.f90")
-add_dependencies(DAMASK_MATH FEsolving)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_MATH>)
+add_library(MATH OBJECT "math.f90")
+add_dependencies(MATH DEBUG)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:MATH>)
+
+add_library(QUATERNIONS OBJECT "quaternions.f90")
+add_dependencies(QUATERNIONS MATH)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:QUATERNIONS>)
+
+add_library(LAMBERT OBJECT "Lambert.f90")
+add_dependencies(LAMBERT MATH)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:LAMBERT>)
+
+add_library(ROTATIONS OBJECT "rotations.f90")
+add_dependencies(ROTATIONS LAMBERT QUATERNIONS)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:ROTATIONS>)
 
 # SPECTRAL solver and FEM solver use different mesh files
 if (PROJECT_NAME STREQUAL "DAMASK_spectral")
       add_library(MESH OBJECT "mesh.f90")
-      add_dependencies(MESH DAMASK_MATH)
+      add_dependencies(MESH ROTATIONS FEsolving)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH>)
 elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
       add_library(FEZoo OBJECT "FEM_zoo.f90")
-      add_dependencies(FEZoo DAMASK_MATH)
+      add_dependencies(FEZoo ROTATIONS FEsolving)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEZoo>)
       add_library(MESH  OBJECT "meshFEM.f90")
       add_dependencies(MESH FEZoo)
