--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,7 +66,7 @@ elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
       add_library(FEZoo OBJECT "FEM_zoo.f90")
       add_dependencies(FEZoo DAMASK_MATH)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEZoo>)
-      add_library(MESH  OBJECT "meshFEM.f90")
+      add_library(MESH  OBJECT "mesh_FEM.f90")
       add_dependencies(MESH FEZoo)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH>)
 endif()
