object oriented element definitions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,10 @@ list(APPEND OBJECTFILES $<TARGET_OBJECTS:SYSTEM_ROUTINES>)
 add_library(PREC OBJECT "prec.f90")
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:PREC>)
 
+add_library(ELEMENT OBJECT "element.f90")
+add_dependencies(ELEMENT PREC)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:ELEMENT>)
+
 add_library(QUIT OBJECT "quit.f90")
 add_dependencies(QUIT PREC)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:QUIT>)
@@ -53,21 +57,21 @@ add_library(FEsolving OBJECT "FEsolving.f90")
 add_dependencies(FEsolving RESULTS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEsolving>)
 
-add_library(DAMASK_MATH OBJECT "math.f90")
-add_dependencies(DAMASK_MATH FEsolving)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_MATH>)
+add_library(MATH OBJECT "math.f90")
+add_dependencies(MATH FEsolving)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:MATH>)
 
 # SPECTRAL solver and FEM solver use different mesh files
 if (PROJECT_NAME STREQUAL "DAMASK_spectral")
       add_library(MESH OBJECT "mesh_grid.f90")
-      add_dependencies(MESH DAMASK_MATH)
+      add_dependencies(MESH MATH ELEMENT)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH>)
 elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
       add_library(FEZoo OBJECT "FEM_zoo.f90")
-      add_dependencies(FEZoo DAMASK_MATH)
+      add_dependencies(FEZoo MATH)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEZoo>)
       add_library(MESH  OBJECT "mesh_FEM.f90")
-      add_dependencies(MESH FEZoo)
+      add_dependencies(MESH FEZoo ELEMENT)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH>)
 endif()
 
