--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 
 # The dependency detection in CMake is not functioning for Fortran,
 # hence we declare the dependencies from top to bottom in the following
+
 add_library(C_ROUTINES OBJECT "C_routines.c")
 set(OBJECTFILES $<TARGET_OBJECTS:C_ROUTINES>)
 
@@ -38,7 +39,7 @@ add_dependencies(NUMERICS IO)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:NUMERICS>)
 
 add_library(DEBUG OBJECT "debug.f90")
-add_dependencies(DEBUG NUMERICS)
+add_dependencies(DEBUG IO)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DEBUG>)
 
 add_library(DAMASK_CONFIG OBJECT "config.f90")
@@ -46,7 +47,7 @@ add_dependencies(DAMASK_CONFIG DEBUG)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_CONFIG>)
 
 add_library(HDF5_UTILITIES OBJECT "HDF5_utilities.f90")
-add_dependencies(HDF5_UTILITIES DAMASK_CONFIG)
+add_dependencies(HDF5_UTILITIES DAMASK_CONFIG NUMERICS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:HDF5_UTILITIES>)
 
 add_library(RESULTS OBJECT "results.f90")
@@ -54,28 +55,28 @@ add_dependencies(RESULTS HDF5_UTILITIES)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:RESULTS>)
 
 add_library(FEsolving OBJECT "FEsolving.f90")
-add_dependencies(FEsolving RESULTS)
+add_dependencies(FEsolving DEBUG)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEsolving>)
 
 add_library(MATH OBJECT "math.f90")
-add_dependencies(MATH FEsolving)
+add_dependencies(MATH NUMERICS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:MATH>)
 
 add_library(MESH_BASE OBJECT "mesh_base.f90")
-add_dependencies(MESH_BASE MATH ELEMENT)
+add_dependencies(MESH_BASE ELEMENT)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH_BASE>)
 
 # SPECTRAL solver and FEM solver use different mesh files
 if (PROJECT_NAME STREQUAL "DAMASK_spectral")
       add_library(MESH OBJECT "mesh_grid.f90")
-      add_dependencies(MESH MATH)
+      add_dependencies(MESH MESH_BASE MATH FEsolving)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH>)
 elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
       add_library(FEZoo OBJECT "FEM_zoo.f90")
-      add_dependencies(FEZoo MATH)
+      add_dependencies(FEZoo IO)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEZoo>)
       add_library(MESH  OBJECT "mesh_FEM.f90")
-      add_dependencies(MESH FEZoo)
+      add_dependencies(MESH FEZoo MESH_BASE MATH FEsolving)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH>)
 endif()
 
@@ -83,9 +84,9 @@ add_library(MATERIAL OBJECT "material.f90")
 add_dependencies(MATERIAL MESH DAMASK_CONFIG)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:MATERIAL>)
 
-add_library(DAMASK_HELPERS OBJECT "lattice.f90")
-add_dependencies(DAMASK_HELPERS MATERIAL)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:DAMASK_HELPERS>)
+add_library(LATTICE OBJECT "lattice.f90")
+add_dependencies(LATTICE MATERIAL)
+list(APPEND OBJECTFILES $<TARGET_OBJECTS:LATTICE>)
 
 # For each modular section
 add_library (PLASTIC OBJECT
@@ -96,14 +97,14 @@ add_library (PLASTIC OBJECT
   "plastic_kinematichardening.f90"
   "plastic_nonlocal.f90"
   "plastic_none.f90")
-add_dependencies(PLASTIC DAMASK_HELPERS)
+add_dependencies(PLASTIC LATTICE RESULTS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:PLASTIC>)
 
 add_library (KINEMATICS OBJECT
   "kinematics_cleavage_opening.f90"
   "kinematics_slipplane_opening.f90"
   "kinematics_thermal_expansion.f90")
-add_dependencies(KINEMATICS DAMASK_HELPERS)
+add_dependencies(KINEMATICS LATTICE RESULTS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:KINEMATICS>)
 
 add_library (SOURCE OBJECT
@@ -113,7 +114,7 @@ add_library (SOURCE OBJECT
   "source_damage_isoDuctile.f90"
   "source_damage_anisoBrittle.f90"
   "source_damage_anisoDuctile.f90")
-add_dependencies(SOURCE DAMASK_HELPERS)
+add_dependencies(SOURCE LATTICE RESULTS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:SOURCE>)
 
 add_library(CONSTITUTIVE OBJECT "constitutive.f90")
